package edu.rit.swen755.heartbeat.criticalservice;

/** Result of assessing the vehicle's position relative to the lane centre. */
public enum LaneAssessment {
    CENTERED,
    DRIFTING_LEFT,
    DRIFTING_RIGHT
}
